--- a/styles/style.scss
+++ b/styles/style.scss
@@ -106,7 +106,7 @@ body {
       content: "";
       border-left: 2px solid rgba(255, 255, 255, 0.1);
       background-color: rgba(0, 0, 0, 0.7);
-      transition: transform 0.5s ease-in-out;
+      transition: all 0.5s ease-in-out;
       position: absolute;
       top: 80px;
       bottom: 0;
@@ -121,8 +121,7 @@ body {
       cursor: pointer;
       position: absolute;
       box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
-      transition: box-shadow 0.2s ease-in-out;
-      transition: transform 0.1s ease-in-out;
+      transition: all 0.1s ease-in-out;
       opacity: 0.4;
   
       &:hover {
